# agent-platform

./: .dockerignore  .env.local.example  .gitignore  .meta.json  AGENTS.md  CLAUDE.md  Dockerfile  README.md  app.info  architecture.md  fly.toml  inspect_files.py  platform.code-workspace  pyproject.toml  rag-saerch-tool.code-workspace  test_direct.py
.github/: pull_request_template.md
.postman/: config.json
app/: __init__.py  main.py
config/: tenants.local.json
docs/: DEPLOYMENT.md  HANDOVER.md  conversation-history.md  migration-test-guide.md  multi-frontend-backend-architecture.md  store-dashboard.md  새교육모델2.md  새교육모델설계서.md
fly-log-shipper/: fly.toml
scripts/: backfill_module_contents.py  check_quiz_questions.py  check_store_counts.py  delete_documents_from_store.py  delete_gemini_corpus_with_docs.py  delete_gemini_store.py  inspect_gemini_store.py  list_gemini_stores.py  migrate_freshdesk_phase1.py  reupload_with_metadata.py  run_sequential_upload.py  test_scoped_search.py  verify_quiz_generation.py  verify_setup.py
static/: index.html
tests/: conftest.py  test_admin_api.py  test_agent_chat_service.py  test_agents.py  test_assist_api.py  test_assist_fields_only.py  test_channel_bff_chat.py  test_chat.py  test_chat_stream_usecase.py  test_common_documents_api.py  test_common_documents_service.py  test_curriculum_quiz_rag_filters.py  test_fdk_sources_required.py  test_freshdesk_entity_resolver.py  test_freshdesk_metadata.py  test_freshdesk_search_service.py  test_health.py  test_kb_client_text_search_limit_order.py  test_llm_gateway.py  test_multitenant_auth.py  test_onboarding_repository_alias.py  test_onboarding_repository_single_session.py  test_orchestrator.py  (+6 more)
(+160 files in other folders)
